--- a/AVTOBUS/AVTOBUS.csproj
+++ b/AVTOBUS/AVTOBUS.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,6 +79,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\e7e9629e-7e59-4544-a955-e4835459f6e5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\3e57f553-7b7b-4b11-bdcd-758c7782333f.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
